test/error/parser/struct-field-after-method.dsk
struct S
    func foo() -> void
        return
    end
    bar: int
end
